[workspace]

members = [
    "crates/macro",
    "crates/core",
    "crates/examples/*"
]

[package]
name = "ar_pe_ce"
version = "0.1.0"
authors = ["Wojciech Polak <wojciech.polak@hitachi-powergrids.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar_pe_ce_core = { path = "crates/core" }
ar_pe_ce_macro = { path = "crates/macro" }
