[package]
name = "ar_pe_ce_core"
version = "0.1.0"
authors = ["Wojciech Polak <wojciech.polak@hitachi-powergrids.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3.1"
async-trait = "0.1"
bytes = "1.0.1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
rmp-serde = "0.15.4"
serde = "1.0.125"
tracing = "0.1"
url = "2.2"
