[package]
name = "ar_pe_ce_core"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
license = "MIT"
description = "TCP based simple streaming RPC - core library"
homepage = "https://github.com/frondeus/ar_pe_ce"
repository = "https://github.com/frondeus/ar_pe_ce"
documentation = "https://docs.rs/ar_pe_ce"
readme = "README.md"
keywords = ["rpc", "async", "stream", "tcp"]
categories = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.3.1"
async-trait = "0.1"
bytes = "1.0.1"
futures = "0.3"
rmp-serde = "0.15.4"
serde = "1.0.125"
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = { version = "1.6.0", features = ["net"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tracing = "0.1"
