[package]
name = "ar_pe_ce_example"
version = "0.0.1"
authors = [ "Wojciech Polak <frondeus@gmail.com>" ]
edition = "2018"

[dependencies]
ar_pe_ce = { path = "../../" }
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15.4"
