[package]
name = "ar_pe_ce_macro"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
license = "MIT"
description = "HTTP2 based simple streaming RPC - macros"
homepage = "https://github.com/frondeus/ar_pe_ce"
repository = "https://github.com/frondeus/ar_pe_ce"
documentation = "https://docs.rs/ar_pe_ce"
readme = "README.md"
keywords = ["rpc", "async", "stream", "http2"]
categories = ["web-programming::http-server", "web-programming::http-client"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"] }
